@@ -1,2 +1,13 @@
 # JavaFX
  Learning JavaFX by myself
+ 
+ Download JavaFX: https://openjfx.io/
+ Download IntelliJ
+ 
+ New Project -> Java FX -> Next -> name -> Finish -> Ctrl + Alt + Shift + S -> Libraries -> + 
+ -> lib directory from JavaFX file that you downloaded -> OK -> Ok -> Apply -> OK
+ 
+ Run -> EditConfiguration -> Modify options -> Add VM options -> VM options: "--module-path /path/to/javafx/sdk --add-modules javafx.controls,javafx.fxml"
+ (giving the path of the lab from the JavaFX file)
+ 
+ DONE!
